--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   mysql:
     image: mysql:8.3
     container_name: mysql_nequi
-    restart: unless-stopped
+    restart: always
     environment:
       MYSQL_DATABASE: 'nequi_db'
       MYSQL_USER: 'nequi_user'
